# Siops_hierarchical_cluster

./: pyproject.toml
clusterizacao/: .~lock.Metricas.csv#  Affinity_Propagation.py  Centroid.py  Hierarchical_Clustering_analysis.py  Hierarchical_Clustering_test.py  Knn_analysis.py  Metricas.csv  Spectral_Clustering.py  Teste.py  Untitled.ipynb  cluster.py  data_treatment.py  knn_teste.py  metricas.py  spyder_chart.py
clusterizacao/Primeiras estimações/: BIRCH.py  Centroid.py  DBSCAN.py  Gaussian_Mixture_Model.py  Hierarchical_Clustering.py  Hierarchical_Clustering_analysis.py  Knn_analysis.py  Mean_Shift.py  Spyder_chart.py  optics.py
hierarchical_cluster/: .~lock.table.xlsx#  Affinity.py  DBSCAN.py  Metricas.csv  clusters.py  data_treatment.py  database.py  excel_export.py  maps.py  metricas.py  optics.py  spyder_chart.py  table.xlsx
hierarchical_cluster/__pycache__/: .~lock.Metricas_1.csv#  Metricas_1.csv  Metricas_2.csv
tests/: test_clusterizacao.py
