[tool.poetry]
name = "clusterizacao"
version = "0.1.0"
description = ""
authors = ["LuizAlexandre21 <luizalexandre21@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.7.3"
scikit-learn = "^1.0.2"
pandas = "^1.4.0"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
peewee = "^3.14.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
